--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -122,61 +122,61 @@
     <div class="most_read">
       <h1 class="section--title">Most Read</h1>
       <div class="one_article">
-        <%=link_to(image_tag(@first_post.first.thumbnail, alt: @first_post.first.title), @first_post.first )%>
+        <%=link_to(image_tag(@first_post.first.thumbnail.url(:medium), alt: @first_post.first.title), @first_post.first )%>
         <p class="paragraph">
           <%=link_to(@first_post.first.title, @first_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@second_post.first.thumbnail, alt: @second_post.first.title), @second_post.first )%>
+        <%=link_to(image_tag(@second_post.first.thumbnail.url(:medium), alt: @second_post.first.title), @second_post.first )%>
         <p class="paragraph">
           <%=link_to(@second_post.first.title, @second_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@third_post.first.thumbnail, alt: @third_post.first.title), @third_post.first )%>
+        <%=link_to(image_tag(@third_post.first.thumbnail.url(:medium), alt: @third_post.first.title), @third_post.first )%>
         <p class="paragraph">
           <%=link_to(@third_post.first.title, @third_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@fourth_post.first.thumbnail, alt: @fourth_post.first.title), @fourth_post.first )%>
+        <%=link_to(image_tag(@fourth_post.first.thumbnail.url(:medium), alt: @fourth_post.first.title), @fourth_post.first )%>
         <p class="paragraph">
           <%=link_to(@fourth_post.first.title, @fourth_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@fifth_post.first.thumbnail, alt: @fifth_post.first.title), @fifth_post.first )%>
+        <%=link_to(image_tag(@fifth_post.first.thumbnail.url(:medium), alt: @fifth_post.first.title), @fifth_post.first )%>
         <p class="paragraph">
           <%=link_to(@fifth_post.first.title, @fifth_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@sixth_post.first.thumbnail, alt: @sixth_post.first.title), @sixth_post.first )%>
+        <%=link_to(image_tag(@sixth_post.first.thumbnail.url(:medium), alt: @sixth_post.first.title), @sixth_post.first )%>
         <p class="paragraph">
           <%=link_to(@sixth_post.first.title, @sixth_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@seventh_post.first.thumbnail, alt: @seventh_post.first.title), @seventh_post.first )%>
+        <%=link_to(image_tag(@seventh_post.first.thumbnail.url(:medium), alt: @seventh_post.first.title), @seventh_post.first )%>
         <p class="paragraph">
           <%=link_to(@seventh_post.first.title, @seventh_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@eighth_post.first.thumbnail, alt: @eighth_post.first.title), @eighth_post.first )%>
+        <%=link_to(image_tag(@eighth_post.first.thumbnail.url(:medium), alt: @eighth_post.first.title), @eighth_post.first )%>
         <p class="paragraph">
           <%=link_to(@eighth_post.first.title, @eighth_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@nineth_post.first.thumbnail, alt: @nineth_post.first.title), @nineth_post.first )%>
+        <%=link_to(image_tag(@nineth_post.first.thumbnail.url(:medium), alt: @nineth_post.first.title), @nineth_post.first )%>
         <p class="paragraph">
           <%=link_to(@nineth_post.first.title, @nineth_post.first )%>
         </p>
       </div>
       <div class="one_article">
-        <%=link_to(image_tag(@tenth_post.first.thumbnail, alt: @tenth_post.first.title), @tenth_post.first )%>
+        <%=link_to(image_tag(@tenth_post.first.thumbnail.url(:medium), alt: @tenth_post.first.title), @tenth_post.first )%>
         <p class="paragraph">
           <%=link_to(@tenth_post.first.title, @tenth_post.first )%>
         </p>
