small efficiency fix

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -215,7 +215,7 @@
 </div>
 <div class="post_apply">
   <div class="sticky">
-    <a href="/applies/new"><img id="apply_image" src="http://i.imgur.com/3M0jhbo.jpg" /></a>
+    <a href="/applies/new"><img id="apply_image" src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
     <div class="articles">
       <div class="flex_other_articles">
       <% if @user_posts_approved.count > 1 %>
