font changes that look soooo good omg

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -370,7 +370,7 @@ $gray:  #2a2a2a;
         div {
           margin-top: 40px;
           h1 {
-            font-family: "Lusitana";
+            font-family: "Playfair Display";
             font-size: 20px;
             margin: 0;
             color: white;
