--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -18,7 +18,7 @@
   margin-bottom: 30px;
   padding-bottom: 20px;
   border-bottom: 3px solid #222;
-  font-family: 'Lusitana';
+  font-family: 'Playfair Display';
   font-size: 30px;
   width: 100%;
 }
