font weight change to headers in articles

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -199,6 +199,9 @@
 #content {
   padding: 0 40px;
    .post_content {
+     h1, h2, h3, h4, h5, h6 {
+       font-weight: normal;
+     }
      img {
        width: 70% !important;
        height: auto !important;
