small style change

--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -62,7 +62,8 @@
     margin-bottom: 5px;
   }
   .meta {
-    font-size: 1em;
+    color: #555;
+    font-size: 0.9em;
     line-height: 1.2;
     display: -webkit-box;
     -webkit-line-clamp: 2;
