--- a/app/views/pages/styling.html.erb
+++ b/app/views/pages/styling.html.erb
@@ -52,7 +52,7 @@
   <p>  Yes, but we limit these to 5 for every three articles you write. You could include all five in one article, or spread them out between the three. Affiliate links also need to be woven into your article. For example, you might say: "This <a href="https://www.amazon.com/Moroccanoil-Luminous-Hairspray-Strong-Ounce/dp/B007B3T47Y/ref=sr_1_cc_5_a_it?s=aps&ie=UTF8&qid=1487554070&sr=1-5-catcorr&keywords=hairspray+for+hair">hairspray</a> is a must have because..." instead of "<a href="https://www.amazon.com/Moroccanoil-Luminous-Hairspray-Strong-Ounce/dp/B007B3T47Y/ref=sr_1_cc_5_a_it?s=aps&ie=UTF8&qid=1487554070&sr=1-5-catcorr&keywords=hairspray+for+hair">Buy this hairspray</a>".</p>
 
   <p class="question">What if I have a friend that wants to write for The Teen Magazine?</p>
-  <p>  That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/applies/new">www.theteenmagazine.com/applies/new</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
+  <p>  That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
 
   <p class="question">How can I become an editor?</p>
   <p>  Editor status is only available for writers who have at least 15 published articles. Once you have 15 published articles, you can email Mia at mia@theteenmagazine.com with an inquiry.</p>
