--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="flex_entertainment_wrapper">
-        <a class="applies" href="/applies/new"><img src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
+        <a class="applies" href="/apply"><img src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
         <div class="entertainment_grid_container">
           <% @number2 = 0 %>
           <% @posts_approved_health.each do |post_health| %>
