--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -197,7 +197,7 @@ button {
 }
 
 footer {
-  height: 7em;
+  height: 9em;
   background-color: #191919;
   color: white;
 
@@ -761,7 +761,7 @@ body {
     text-decoration: none;
   }
   nav {
-    padding-top: 25px;
+    padding-top: 35px;
   }
 
   a:hover {
@@ -849,6 +849,69 @@ hr {
   border: 0;
   border-top: 2px solid $highlight;
   margin: 2rem 0;
+}
+
+.submitted {
+  .signupdiv {
+    display: block;
+    margin-left: 0;
+    width: 100%;
+    .container {
+      width: 100%;
+      flex-direction: row;
+      height: 120px;
+      margin-bottom: 20px;
+      background-color: #65B19D;
+      .exclusive-offer {
+        background-image: url();
+      }
+      #exclusive-title--id, .exclusive-title {
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 20px;
+      }
+      .mccontainer {
+        margin-top: 28px;
+        margin-right: 10px;
+      }
+    }
+  }
+  #mc-embedded-subscribe-form {
+    color: white;
+    width: 200px;
+    max-height: 10px;
+    display: inline;
+
+    h2 {
+      display: none;
+    }
+
+    .flex--email {
+      display: flex;
+      flex-direction: row;
+
+      .email {
+        height: 2em;
+        float: left;
+        min-width: 200px;
+        max-width: 300px;
+        margin-top: 0;
+      }
+
+      .button {
+        background-color: #aaa;
+        height: 2em;
+        float: left;
+        padding-left: 7px;
+        padding-right: 7px;
+        margin-left: 5px;
+      }
+    }
+  }
+
+  .signup {
+    width: 50%;
+  }
 }
 
 @media (max-width: 1100px) {
@@ -1080,8 +1143,7 @@ hr {
   }
 
   body {
-    .body {
-      .home--main {
+    .body, .submitted {
         .parentflex, .flexbox {
           display: block;
           height: auto;
@@ -1091,8 +1153,8 @@ hr {
             display: block;
         }
         .container {
-          flex-direction: column;
-          height: auto;
+          flex-direction: column !important;
+          height: auto !important;
           .exclusive-offer {
             height: 40px;
             .exclusive-title {
@@ -1103,16 +1165,15 @@ hr {
             display: none;
           }
           .mccontainer {
-            margin-top: 30px;
-            margin-bottom: 10px;
+            margin-top: 30px !important;
+            margin-bottom: 10px !important;
             width: 350px;
-            margin-left: auto;
-            margin-right: auto;
+            margin-left: auto !important;
+            margin-right: auto !important;
             .flex--email {
               width: 350px;
             }
           }
-        }
       }
     }
   }
@@ -1149,11 +1210,15 @@ hr {
       }
     }
   }
-  .mccontainer {
-    margin-top: 50px !important;
-    margin-left: 10px !important;
-    min-width: 280px !important;
-    max-width: 280px !important;
+  .body, .submitted {
+    .container {
+      .mccontainer {
+        margin-top: 50px !important;
+        margin-left: 10px !important;
+        min-width: 280px !important;
+        max-width: 280px !important;
+      }
+    }
   }
   #mce-EMAIL, .email {
     min-width: 68% !important;
