application can be accepted from link

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,4 +1,4 @@
-<h1 id="page_title">Apply to Become a Journalist for the Teen Magazine!</h1>
+<h1 id="page_title">Become a Journalist for the Teen Magazine!</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
     <span>First Name</span>
@@ -21,8 +21,6 @@
       <%= f.label :nickname %> <br />
       <%= f.text_field :nickname %>
     </div>
-
-    <%# <%= f.hidden_field :password, value: [*('A'..'Z'),*('0'..'9')].shuffle[0,8].join %>
 
     <span>Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.</span>
     <br /><br />
