updated apply page

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,6 +1,12 @@
-<h1 id="page_title">Become a Journalist for the Teen Magazine!</h1>
+<h1 id="page_title">Become a Journalist for the Teen Magazine</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
+    <span>Being a journalist for The Teen Magazine
+      offers the experience and mentorship necessary to launch your journalism career. In the past, our writers have interviewed
+      celebrities, reported on important world affairs, partnered with businesses, and have had their articles read
+      by thousands of readers. Please fill out this application thoroughly as applications are competitive.
+      We look forward to welcoming you to The Teen Magazine!
+    </span><br /><br />
     <span>First Name</span>
     <%= f.text_field :first_name, required: true %>
     <br />
@@ -11,10 +17,12 @@
     <%= f.email_field :email, required: true %>
     <br />
     <span>Primary Category</span><br /><br />
-    <%= f.select :category, ['Academics', 'Get Involved', 'Health & Fitness', 'News', 'Lifestyle', 'Beauty', 'Fashion', 'Entertainment', 'Tips & Hacks', 'DIY']%><br />
+    <%= f.select :category, ['Academics', 'Beauty', 'DIY', 'Entertainment', 'Fashion', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'News', 'Tips & Hacks']%><br />
     <br />
     <br />
-    <span>Please write a cover letter describing your experience as a writer and how you would contribute to The Teen Magazine's writer community.</span>
+    <span>Please write a cover letter describing why you would be a good fit for The Teen Magazine's team of journalists.
+      Include why you would like to become a writer for The Teen Magazine as well as the kind of articles you enjoy writing.
+    </span>
     <%= f.text_area :description, required: true %>
     <br />
     <div class="hidden">
