--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,6 +1,7 @@
 <h1 id="page_title">Become a Journalist for the Teen Magazine</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
+    <span>Thank you for your interest in The Teen Magazine!</span><br /><br />
     <span>Being a journalist for The Teen Magazine
       offers the experience and mentorship necessary to launch your journalism career. In the past, our writers have interviewed
       celebrities, reported on important world affairs, partnered with businesses, and have had their articles read
