edit to writer application

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -5,8 +5,7 @@
     <span>Being a journalist for The Teen Magazine
       offers the experience and mentorship necessary to launch your journalism career. In the past, our writers have interviewed
       celebrities, reported on important world affairs, partnered with businesses, and have had their articles read
-      by thousands of readers. Please fill out this application thoroughly as applications are competitive.
-      We look forward to welcoming you to The Teen Magazine!
+      by thousands of readers. We look forward to welcoming you to The Teen Magazine!
     </span><br /><br />
     <span>First Name</span>
     <%= f.text_field :first_name, required: true %>
@@ -21,7 +20,7 @@
     <%= f.select :category, ['Academics', 'Beauty', 'DIY', 'Entertainment', 'Fashion', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'News', 'Tips & Hacks']%><br />
     <br />
     <br />
-    <span>Please write a cover letter describing why you would be a good fit for The Teen Magazine's team of journalists.
+    <span>Please write a short cover letter describing why you would be a good fit for The Teen Magazine's team of journalists.
       Include why you would like to become a writer for The Teen Magazine as well as the kind of articles you enjoy writing.
     </span>
     <%= f.text_area :description, required: true %>
