--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -32,7 +32,7 @@
 
     <span>Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.</span>
     <br /><br />
-    <%= f.submit 'Submit Application', class: 'button' %>
+    <%= f.submit 'Submit Application' %>
   <% end %>
   <br>
   <br>
