--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,11 +1,10 @@
 <h1 id="page_title">Become a Journalist for the Teen Magazine</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
-    <span>Thank you for your interest in The Teen Magazine!</span><br /><br />
     <span>Being a journalist for The Teen Magazine
       offers the experience and mentorship necessary to launch your journalism career. In the past, our writers have interviewed
       celebrities, reported on important world affairs, partnered with businesses, and have had their articles read
-      by thousands of readers. We look forward to welcoming you to The Teen Magazine!
+      by thousands of readers. Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.
     </span><br /><br />
     <span>First Name</span>
     <%= f.text_field :first_name, required: true %>
@@ -29,9 +28,6 @@
       <%= f.label :nickname %> <br />
       <%= f.text_field :nickname %>
     </div>
-
-    <span>Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.</span>
-    <br /><br />
     <%= f.submit 'Submit Application' %>
   <% end %>
   <br>
