--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -2,9 +2,8 @@
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
     <span>Being a journalist for The Teen Magazine
-      offers the experience and mentorship necessary to launch your journalism career. In the past, our writers have interviewed
-      celebrities, reported on important world affairs, partnered with businesses, and have had their articles read
-      by thousands of readers. Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.
+      offers the experience and mentorship necessary to launch your journalism career.
+      Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.
     </span><br /><br />
     <span>First Name</span>
     <%= f.text_field :first_name, required: true %>
