writer app update

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -18,8 +18,7 @@
     <%= f.select :category, ['Academics', 'Beauty', 'DIY', 'Entertainment', 'Fashion', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'News', 'Tips & Hacks']%><br />
     <br />
     <br />
-    <span>Please write a short cover letter describing why you would be a good fit for The Teen Magazine's team of journalists.
-      Include why you would like to become a writer for The Teen Magazine as well as the kind of articles you enjoy writing.
+    <span>Please write a short cover letter introducing yourself and describing why you would be a good fit for The Teen Magazine journalist position.
     </span>
     <%= f.text_area :description, required: true %>
     <br />
