--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,10 +1,6 @@
 <h1 id="page_title">Become a Journalist for the Teen Magazine</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
-    <span>Being a journalist for The Teen Magazine
-      offers the experience and mentorship necessary to launch your journalism career.
-      Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.
-    </span><br /><br />
     <span>First Name</span>
     <%= f.text_field :first_name, required: true %>
     <br />
@@ -26,6 +22,9 @@
       <%= f.label :nickname %> <br />
       <%= f.text_field :nickname %>
     </div>
+    <span>
+      Applications are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within 48 hours.
+    </span><br /><br />
     <%= f.submit 'Submit Application' %>
   <% end %>
   <br>
