--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,3 +1,7 @@
+<script>
+pintrk('track', 'pagevisit');
+</script>
+
 <h1 id="page_title">Become a Journalist for the Teen Magazine</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for @application do |f| %>
