--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,41 @@
-<div id="posts_wrapper" class="skinny_wrapper">
-  <h1 id="page_title" style="margin-top: -20px;">Profile Preview</h1>
+<% @pageviews = 0 %>
+<% @user_posts.each do | post | %>
+  <% if post.post_impressions != nil %>
+    <% @pageviews = @pageviews + post.post_impressions %>
+  <% end %>
+<% end %>
+<% if @user.monthly_views == nil %>
+  <% @user.monthly_views = 0 %>
+  <% @user.save %>
+<% end %>
+<% @rank = @rankings.index(@user.id) + 1 %>
+<div id="posts_wrapper" class="skinny_wrapper" style="padding-top: 0px;">
+<% if @user.monthly_views != 0 %>
+<div class ="flex">
+<h1 id="page_title">Your Rank: <%= @rank %></h1>
+  <% if @rank != 1 %>
+    <% @impressions_to_get = 0 %>
+    <% @compare_user %>
+    <% @counter = @rank - 1 %>
+    <% while @impressions_to_get = 0 %>
+      <% @compare_user = User.find(@rankings[@counter]) %>
+      <% @impressions_to_get = @compare_user.monthly_views - @user.monthly_views %>
+      <% @counter = @counter - 1 %>
+      <% if @impressions_to_get != 0 %>
+        <div><p style="font-weight: 300; font-size: 18px;"><span style="font-weight: 400;"><%= @impressions_to_get + 1 %></span> more page views to reach rank <%= @rankings.index(@compare_user.id) + 1 %></p>
+        <% break %>
+      <% end %>
+    <% end %>
+  <% else %>
+    <div><p style="font-weight: 300; font-size: 18px;">Congratulations! You are ranked first out of <%=User.count%> writers.</p>
+  <% end %>
+  <h1 id="page_title" style="margin-top: -20px; padding-top: 0; font-size: 11px;"><span style="font-weight: 400;">Lifetime Views:
+    <%= @pageviews %></span> | Monthly Views: <%= @user.monthly_views %></h1></div>
+</div>
+<% else %>
+<h1 id="page_title" style="margin-top: -20px; border-bottom: none;">
+<span style="font-weight: 400;">Lifetime Views: <%= @pageviews %></span> | Monthly Views: <%= @user.monthly_views %></h1>
+<p style="text-align: center; margin-top: -50px; padding-bottom: 25px; font-size: 15px;">In order to see your rank for this month, your monthly views cannot be 0.</p><% end %>
 
 <div id="background">
   <%= render 'profile' %>
