--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
 <% else %>
 <h1 id="page_title" style="margin-top: -20px; border-bottom: none;">
 <span style="font-weight: 400;">Lifetime Views: <%= @pageviews %></span> | Monthly Views: <%= @user.monthly_views %></h1>
-<p style="text-align: center; margin-top: -50px; padding-bottom: 25px; font-size: 15px;">In order to see your rank for this month, your monthly views cannot be 0.</p><% end %>
+<p style="text-align: center; margin-top: -50px; font-size: 15px;">In order to see your rank for this month, your monthly views cannot be 0.</p><% end %>
 
 <div id="background">
   <%= render 'profile' %>
