--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -11,19 +11,25 @@
     <p>Hi <%= @user.first_name %>,</p>
     <p>Congratulations!</p>
     <p>We were impressed with your application and are happy to welcome you to our team of international journalists!
-      My name is Mia, and I work at The Teen Magazine with our writer.</p>
+      My name is Mia, and I work at The Teen Magazine with our writers.</p>
     <p>Being a writer for The Teen Magazine offers the experience and mentorship necessary to launch your journalism career.
-      Our writers have interviewed celebrities, reported on important world affairs, worked with businesses, and have had their
-      articles read by thousands of readers. We are so excited to welcome you to our talented team of journalists, and we can't wait
+      Our writers get the opportunity to interview celebrities, report on important world affairs, work with businesses, and have their
+      articles read by thousands of readers. You will receive mentorship, build your journalism resume, and network with our amazing community
+      of journalists. We are so excited to welcome you to our talented team of journalists, and we can't wait
       to work with you to create your first article!</p>
-    <p>Keeping your position as a journalist for The Teen Magazine requires at least one submitted article per month.
-      You will receive mentorship, build your journalism resume, and network with our amazing community
-      of journalists.</p>
-    <p>To start your first article, go to the “Dashboard” page after you sign in and click on “New Post.” Before submitting
+    <p>Your next steps:</p>
+    <ol>
+      <li>Join the Facebook group found <%= link_to "here","https://www.facebook.com/groups/615063885673363/" %></li>
+      <li>Fill out the welcome survey found <%= link_to "here","https://forms.gle/srnzE22QWpWWES1J6" %></li>
+      <li>Log into your new account! Your username is <bold style="color: blue;"><%= @user.email %></bold> and your password is <bold style="color: blue;"><%= @user.password %></bold>. 
+        You can change your password at <%= link_to "https://www.theteenmagazine.com/users/edit", "https://www.theteenmagazine.com/users/edit" %> 
+        and you can login into your account at <%= link_to "https://www.theteenmagazine.com/login", "https://www.theteenmagazine.com/login" %>.</li>
+    </ol>
+    <p>Once you're accepted into the Facebook group, please write a short post introducing yourself! This Facebook group is new,
+      so your introduction might be the first! Please come back to check on this group often as this is the number one way to connect with other writers from The Teen Magazine.</p>
+    <p>Once you're ready to start your first article, go to the “Dashboard” page after you log in and click on “New Post.” Before submitting
       an article for approval, please read the instructions on “writing the perfect article” found on your dashboard.</p>
-    <p>Your login is <bold style="color: blue;"><%= @user.email %></bold> and your password is <bold style="color: blue;"><%= @user.password %></bold>. 
-      You can change your password at <%= link_to "https://www.theteenmagazine.com/users/edit", "https://www.theteenmagazine.com/users/edit" %> 
-      and you can login into your account at <%= link_to "https://www.theteenmagazine.com/login", "https://www.theteenmagazine.com/login" %>.</p>
+    <p>Please let me know if you have any questions! We look forward to reading your first submitted article!</p>
     <p>Best Regards,<br/>Mia Johansson</p>
   </body>
 </html>
