--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -28,7 +28,7 @@
     <p>Once you've been accepted into the Facebook group, please write a short post introducing yourself. This Facebook group is new,
       so your introduction might be the first! Please check back on this group often as this is the number one way to connect with other writers from The Teen Magazine.</p>
     <p>When you're ready to start your first article, go to your Dashboard and click on “New Post.” Before submitting
-      an article for approval, please read the instructions on “writing the perfect article” found on your dashboard.</p>
+      an article for approval, please read the instructions on “Writing the perfect article” found on your dashboard.</p>
     <p>Please let me know if you have any questions! We look forward to reading your first submitted article!</p>
     <p>Best Regards,<br/>Mia Johansson</p>
   </body>
