font family fix

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -230,7 +230,7 @@
        padding-left: 10px;
      }
      span {
-       font-family: 'Raleway', sans-serif !important;
+       font-family: 'Source Sans Pro', sans-serif !important;
        font-size: 1.1rem !important;
      }
      h1 span {
@@ -257,7 +257,7 @@
        font-size: 1rem !important;
      }
      p span {
-       font-family: 'Raleway', sans-serif !important;
+       font-family: 'Source Sans Pro', sans-serif !important;
        font-size: 1.1rem !important;
        line-height: 1.75 !important;
      }
