had some problems with gemfile; style changes; fixed broken links

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -153,8 +153,8 @@ $gray:  #2a2a2a;
     text-decoration: none;
   }
   .date {
-    font-size: .5em;
-    color: $light;
+    font-size: .7em;
+    color: #3f3f3f;
   }
   p {
     margin: 0 0 .75em 0;
