--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -81,7 +81,7 @@
             <i aria-hidden="true" class="fa fa-facebook"></i>
           </div>
        </a>
-      <a class="js-share-twitter-link" href="//www.twitter.com/share?url=http://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
+      <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=http://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
         <div style="background-color: #55ACEE">
           <i aria-hidden="true" class="fa fa-twitter"></i>
         </div>
