--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -294,7 +294,7 @@ footer {
       }
     }
     .date {
-      color: #bdbdbd;
+      color: #545454;
       font-size: 12px;
       margin-top: 3px;
     }
@@ -342,8 +342,8 @@ footer {
         }
       }
       .date {
-        font-size: 12px;
-        color: #bdbdbd;
+        font-size: 15px;
+        color: #545454;
       }
     }
 
