--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -23,6 +23,18 @@
   width: 100%;
 }
 
+.meta {
+  color: #555;
+  font-size: 0.9em !important;
+  line-height: 1.2;
+  height: 50px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .flex--welcome {
   display: flex;
   flex-direction: row;
@@ -60,17 +72,6 @@
   p {
     font-size: 0.5em;
     margin-bottom: 5px;
-  }
-  .meta {
-    color: #555;
-    font-size: 0.9em;
-    line-height: 1.2;
-    height: 50px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
   .entertainment--section {
     .entertainment {
@@ -190,15 +191,6 @@
   p {
     font-size: 0.5em;
     margin-bottom: 5px;
-  }
-  .meta {
-    font-size: 1em;
-    line-height: 1.2;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
   .one_article {
     width: 31%;
