--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -56,16 +56,13 @@
           </div>
           <div class="one_author second_author">
             <% if @post.collaboration != nil || @post.collaboration != "" %>
-              <% @users.each do |user| %>
-                <% if user.full_name == @post.collaboration %>
-                  <% if user.profile.exists? %>
-                    <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
+              <% @collab = User.where(email:  @post.collaboration).first %>
+                  <% if @collab.profile.exists? %>
+                    <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
                   <% else %>
                     <%= image_tag("https://isw.fbk.eu/sites/isw2015.fbk.eu/files/Profilo_2.jpg", :class => "profile_img") %>
                   <% end %>
-                <% end %>
-              <% end %>
-            <p class="author" style="margin-right: 10px;"><%= @post.collaboration %></p>
+            <p class="author" style="margin-right: 10px;">By <%= @collab.full_name %></p>
             <% end %>
           </div>
         </div>
