--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,6 +28,8 @@
 }
 </style>
 
+<% @collab = User.where(email:  @post.collaboration).first %>
+
 <div class="div">
   <div class="post_image">
   </div>
@@ -56,7 +58,6 @@
           </div>
           <div class="one_author second_author">
             <% if @post.collaboration != nil || @post.collaboration != "" %>
-              <% @collab = User.where(email:  @post.collaboration).first %>
                 <% if  @collab != nil %>
                   <% if @collab.profile.exists? %>
                     <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
@@ -121,7 +122,7 @@
   </form>
   </div>
 
-  <% if current_user && (current_user.id == @post.user_id || @post.collaboration == current_user.full_name || current_user.admin? || current_user.editor?) %>
+  <% if current_user && (current_user.id == @post.user_id || @post.collaboration == current_user.email || current_user.admin? || current_user.editor?) %>
     <div id="admin_links">
       <%= link_to "Edit Article", edit_post_path(@post) %>
       <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
@@ -140,7 +141,7 @@
 <div id= "background">
   <%= render :partial => 'users/profile' %>
   <% @users.each do |user| %>
-    <% if user.full_name == @post.collaboration %>
+    <% if user.email == @post.collaboration %>
       <div class="flex--profile" style="margin-top: -40px">
         <% if user.profile.exists? %>
           <%= image_tag(user.profile.url(:square), :class => "profile_img") %>
