--- a/app/views/application_mailer/welcome_email_copy.html.erb
+++ b/app/views/application_mailer/welcome_email_copy.html.erb
@@ -10,7 +10,7 @@
   <body>
     <p>Hi <%= @user.first_name %>,</p>
     <p>Congratulations!</p>
-    <p>We were impressed with your application and are happy to welcome you to our team of international journalists!
+    <p>We were moved by your application and think you are a great fit with our team of international journalists.
       My name is Mia, and I work at The Teen Magazine with our writers.</p>
     <p>Being a writer for The Teen Magazine offers the experience and mentorship necessary to launch your journalism career.
       Our writers get the opportunity to interview celebrities, report on important world affairs, work with businesses, and have their
