--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -3,11 +3,11 @@
   <div class="about">
     <img id="main" src="https://pbs.twimg.com/media/DM7BlLDVAAA5AKb.jpg" />
     <p>
-      Founded in 2016 by Mia Johansson, The Teen Magazine started as a blog with a few writers. Since then, it has grown into an international online magazine
-      with over 150 writers from around the world. I made the website with the initial purpose of this website was to learn Ruby on Rails and Git for one of my computer science internships.
-      I never thought theteenmagazine.com would be anything more than a hobby, but I had fun adding complexity to the site, and my website has since grown into so much more.
-      Through my website, I have been able to communicate with people from all over the world, give aspiring journalists a platform to publish, and, after the fires
-      in my hometown of Santa Rosa, make a difference in my community by fundraising for fire victims.
+      Founded in 2017 by Mia Johansson, The Teen Magazine started as a blog with a few writers. Since then, it has grown into an international online magazine
+      with over 150 writers from around the world. Mia made the website with the initial purpose of learning Ruby on Rails and Git for one of her computer science internships.
+      She never thought The Teen Magazine would be anything more than a hobby, but after seeing the excitement of her new writers, Mia felt inspired to grow the website.
+      Today The Teen Magazine gives aspiring journalists a platform to publish, and, after the fires
+      in Mia's hometown of Santa Rosa, has helped make a difference in her community by fundraising for fire victims.
     </p>
   </div>
   <h1 id="page_title">Meet The Teen Magazine Team</h1>
