--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -5,7 +5,7 @@
     <p>
       Founded in 2017 by Mia Johansson, The Teen Magazine started as a blog with a few writers. Since then, it has grown into an international online magazine
       with over 150 writers from around the world. Mia made the website with the initial purpose of learning Ruby on Rails and Git for one of her computer science internships.
-      She never thought The Teen Magazine would be anything more than a hobby, but after seeing the excitement of her new writers, Mia felt inspired to grow the website.
+      She never thought The Teen Magazine would be anything more than a hobby, but after seeing the excitement of her new writers, Mia became inspired to grow the website.
       Today The Teen Magazine gives aspiring journalists a platform to publish, and, after the fires
       in Mia's hometown of Santa Rosa, has helped make a difference in her community by fundraising for fire victims.
     </p>
