--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -54,7 +54,7 @@
               <%=link_to(image_tag(post_getinvolved.thumbnail.url(:large2), alt: post_getinvolved.title), post_getinvolved )%>
               <h1><%= link_to post_getinvolved.title, post_getinvolved %></h1>
               <p><%= post_getinvolved.created_at.strftime("%A, %b %d")%></p>
-              <p class="meta"><%= post_getinvolved.meta_description %></p>
+              <p class="meta"><%= post_getinvolved.meta_description[0, 130] %></p>
             </div>
             <% @number += 1 %>
             <% end %>
@@ -110,7 +110,7 @@
                 <%=link_to(image_tag(post_health.thumbnail.url(:medium), alt: post_health.title), post_health )%>
                 <h1><%= link_to post_health.title, post_health %></h1>
                 <p><%= post_health.created_at.strftime("%A, %b %d")%></p>
-                <p class="meta"><%= post_health.meta_description[0, 120] %>...</p>
+                <p class="meta"><%= post_health.meta_description[0, 130] %>...</p>
               </div>
               <% @number += 1 %>
               <% end %>
