--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -156,7 +156,7 @@
           <%=link_to(image_tag(post.thumbnail.url(:medium), alt: post.title), post )%>
           <h1><%= link_to post.title, post %></h1>
           <p><%= post.created_at.strftime("%A, %b %d")%></p>
-          <p class="meta"><%= postmeta_description.truncate_words(20) %></p>
+          <p class="meta"><%= post.meta_description.truncate_words(20) %></p>
         </div>
         <% if @number == 0 %>
         <div class="list--articles mobile removed" style="border: none; margin-top: -20px;">
