--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -165,7 +165,6 @@
         <% if (user.description != "" && user.description != nil) %>
           <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
         <% end %>
-
           <div class="website">
             <% if (user.website != "" && user.website !=  nil) %>
                <p class="website_link"><span>Website: </span><a href="<%= user.website %>" target="_blank"><%= user.website %></a></p>
@@ -217,35 +216,17 @@
     <a href="/apply"><img id="apply_image" src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
     <div class="articles">
       <div class="flex_other_articles">
-      <% if @user_posts_approved.count > 1 %>
-      <h3 class="title">More by <%= @post.user.first_name %> <%= @post.user.last_name %></h3>
+      <h3 class="title">More in <%= link_to(@post.meta_title, Category.find(@post.category_id)) %></h3>
       <div class="contain_articles">
-        <% @user_posts_approved[0..9].each do |post| %>
-          <% if post.title != @post.title %>
-            <div class="one_article">
-                 <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
-                <div class="paragraph">
-                  <p><%= link_to(post.title.truncate_words(10), post) %></p>
-                </div>
-             </div>
-          <% end %>
-          <% end %>
-      </div>
-      <% else %>
-      <h3 class="title">More in <%= @post.meta_title %></h3>
-      <div class="contain_articles">
-        <% @posts[0..9].each do |post| %>
-          <% if (post.meta_title == @post.meta_title) && (post.title != @post.title) %>
-            <div class="one_article">
-               <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
-              <div class="paragraph">
-                <p><%= link_to(post.title.truncate_words(10), post) %></p>
-              </div>
+        <% Post.approved.where(meta_title: @post.meta_title).each do |post| %>
+          <div class="one_article">
+             <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
+            <div class="paragraph">
+              <p><%= link_to(post.title.truncate_words(10), post) %></p>
             </div>
-        <% end %>
+          </div>
       <% end %>
       </div>
-    <% end %>
     </div>
     </div>
   </div>
